--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <a href="https://ovk.to/id31390">OpenVK</a>
       <a href="https://codeberg.org/kinif">Codeberg</a>
     </div>
-    <h1 class="whoami"><a href="aboutme.html" style="text-decoration: none; color: inherit;">who am i?</a></h1>
-    <h2 class="video"><a href="video.html" style="text-decoration: none; color: inherit;">video archive</a></h2>
+    <h1 class="whoami"><a href="aboutme.html" style="text-decoration: none; color: inherit;">about me</a></h1>
+    <h2 class="video"><a href="video.html" style="text-decoration: none; color: inherit;">video archive (playlists)</a></h2>
   </main>
   <footer>
     © finik 2025 <br>
