--- a/video.html
+++ b/video.html
@@ -14,7 +14,8 @@
   <main>
     <div class="social-links">
     <ul>
-        <li><a href="https://www.youtube.com/playlist?list=PLXov4BxDmYEeps-0VadzDjYkGcPRrhtSU">Июнь 2025 (плейлист)</a></li>
+        <li><a href="https://youtube.com/playlist?list=PLXov4BxDmYEdUYvHhBzwqyPMZX82dt-I6&si=3W4SNkXJGerPMJ0x">Июль 2025</a></li>
+        <li><a href="https://www.youtube.com/playlist?list=PLXov4BxDmYEeps-0VadzDjYkGcPRrhtSU">Июнь 2025</a></li>
         <li><a href="https://www.youtube.com/playlist?list=PLXov4BxDmYEcWnRFY4b6AtyJGg4PS0EhW">Май 2025</a></li>
         <li><a href="https://www.youtube.com/playlist?list=PLXov4BxDmYEeGxmPCQAbgXElCG0qDnRvM">Апрель 2025</a></li>
         <li><a href="https://www.youtube.com/playlist?list=PLXov4BxDmYEdaKLKwJT47QFR72qFgGGis">Август 2024</a></li>
